force-app/main/default/objects/Universal_Event__c/Universal_Event__c.object-meta.xml
<CustomObject>
    <description>Normalized event layer for SentinelFlow. Converts incidents, integration logs, platform events, and future connectors into one revenue-continuity event model.</description>
    <label>Universal Event</label>
    <nameField>
        <displayFormat>UE-{000000}</displayFormat>
        <label>Universal Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Universal Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>