force-app/main/default/objects/Universal_Event__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>Business Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>