force-app/main/default/objects/Universal_Event__c/fields/Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Event_Key__c</fullName>
    <description>Stable source key used to upsert one universal event per source record.</description>
    <externalId>true</externalId>
    <label>Event Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>