force-app/main/default/objects/Universal_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>API_FAILURE</fullName><default>true</default><label>API Failure</label></value>
            <value><fullName>FLOW_FAILURE</fullName><default>false</default><label>Flow Failure</label></value>
            <value><fullName>APEX_FAILURE</fullName><default>false</default><label>Apex Failure</label></value>
            <value><fullName>INCIDENT</fullName><default>false</default><label>Incident</label></value>
            <value><fullName>RECOVERY</fullName><default>false</default><label>Recovery</label></value>
            <value><fullName>BUSINESS_RISK</fullName><default>false</default><label>Business Risk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>