force-app/main/default/objects/Universal_Event__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Universal Events</relationshipLabel>
    <relationshipName>Universal_Events</relationshipName>
    <type>Lookup</type>
</CustomField>