force-app/main/default/objects/Universal_Event__c/fields/Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Log</label>
    <referenceTo>Integration_Log__c</referenceTo>
    <relationshipLabel>Universal Events</relationshipLabel>
    <relationshipName>Universal_Events</relationshipName>
    <type>Lookup</type>
</CustomField>