force-app/main/default/objects/Universal_Event__c/fields/Recovery_Possible__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Possible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recovery Possible</label>
    <type>Checkbox</type>
</CustomField>