force-app/main/default/objects/Universal_Event__c/fields/Revenue_Risk__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Risk__c</fullName>
    <label>Revenue Risk</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>