force-app/main/default/objects/Universal_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Salesforce</fullName><default>true</default><label>Salesforce</label></value>
            <value><fullName>Stripe</fullName><default>false</default><label>Stripe</label></value>
            <value><fullName>HubSpot</fullName><default>false</default><label>HubSpot</label></value>
            <value><fullName>Shopify</fullName><default>false</default><label>Shopify</label></value>
            <value><fullName>External</fullName><default>false</default><label>External</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>