force-app/main/default/objects/Universal_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Analyzed</fullName><default>false</default><label>Analyzed</label></value>
            <value><fullName>Governed</fullName><default>false</default><label>Governed</label></value>
            <value><fullName>Healing</fullName><default>false</default><label>Healing</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>