force-app/main/default/objects/Universal_Event__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Universal Events</relationshipLabel>
    <relationshipName>Universal_Events</relationshipName>
    <type>Lookup</type>
</CustomField>