force-app/main/default/objects/Universal_Event__c/fields/Users_Affected__c.field-meta.xml
<CustomField>
    <fullName>Users_Affected__c</fullName>
    <label>Users Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>