force-app/main/default/objects/Universal_Event__c/fields/Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Stage__c</fullName>
    <label>Workflow Stage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>